Removed unused code and refactored some functions

--- a/src/app/grouped-mat-table/grouped-mat-table.component.html
+++ b/src/app/grouped-mat-table/grouped-mat-table.component.html
@@ -57,7 +57,7 @@
   <mat-row
     mat-ripple
     *matRowDef="let row; columns: ['groupHeader']; when: isGroup"
-    (click)="expandRow(row)"
+    (click)="toggleRow(row)"
     style="cursor: pointer; background-color: lightgray;"
     [ngClass]="row.numChildren > 0 ? '' : 'hidden'"
   ></mat-row>
