--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,18 @@
-<nh-grouped-mat-table
-    [data]="data"
+<!-- <nh-mat-grouped-table
     [columnOrder]="columnOrder"
-></nh-grouped-mat-table>
+    [data]="data"
+></nh-mat-grouped-table> -->
+
+<nh-mat-table
+    [columnOrder]="columnOrder"
+    [data]="data"
+></nh-mat-table>
+
+<!-- <app-rxjs-test
+    a="a"
+    b="b"
+></app-rxjs-test> -->
+
+<!-- <app-row-span-table></app-row-span-table> -->
+
+<!-- <app-resizeable-table></app-resizeable-table> -->
