--- a/src/app/nh-mat-table/nh-mat-table.component.html
+++ b/src/app/nh-mat-table/nh-mat-table.component.html
@@ -1,46 +1,109 @@
-<div class="mat-elevation-z8">
-    <div class="table-header d-flex p-1">
-        <mat-form-field class="w-100">
-            <mat-label>Filter</mat-label>
-            <input matInput (keyup)="applyFilter($event)" [placeholder]="filter?.placeholder ?? 'Suchen...'" #filterInput>
-        </mat-form-field>
-        <mat-paginator
-          class="w-100"
-          *ngIf="pager?.position == 'top'"
-          [pageSizeOptions]="pager?.pageSizeOptions ?? [5, 10, 25, 100]"
-          [pageSize]="pager?.defaultPageSize ?? 100"
-          aria-label="Select page"
-        ></mat-paginator>
-    </div>
-  <table mat-table [dataSource]="dataSource" matSort>
-    <ng-container
-      *ngFor="let column of columnOrder"
-      class="table-item"
-      [matColumnDef]="column.name"
+<!-- TODO save column order between sessions -->
+<div class="table-header d-flex p-1">
+  <mat-form-field class="w-100">
+    <mat-label>Filter</mat-label>
+    <input
+      matInput
+      [placeholder]="filter?.placeholder ?? 'Suchen...'"
+      [(ngModel)]="filterValue"
+      #filterInput
+    />
+    <button
+      mat-button
+      *ngIf="filterValue"
+      matSuffix
+      mat-icon-button
+      aria-label="Clear"
+      (click)="filterValue = ''"
     >
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>
-        {{ column.displayName ?? column.name }}
-      </th>
-      <td mat-cell *matCellDef="let element">
-        {{ element[column.name] }}
-      </td>
-    </ng-container>
-    
-    <tr mat-header-row *matHeaderRowDef="displayedColumnOrder"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumnOrder"></tr>
+      <i class="fa-solid fa-x" style="font-size: 0.75rem"></i>
+    </button>
+  </mat-form-field>
+  <mat-paginator
+    class="w-100"
+    *ngIf="pager?.position == 'top'"
+    [pageSizeOptions]="pager?.pageSizeOptions ?? [5, 10, 25, 100]"
+    [pageSize]="pager?.defaultPageSize ?? 10"
+    aria-label="Select page"
+    [hidePageSize]="pager?.hidePageSize"
+  ></mat-paginator>
+</div>
 
-    <tr class="mat-row" *matNoDataRow>
-        <td [colSpan]="columnOrder.length" class="mat-cell">
-            Es wurden keine Daten mit dem Filter "{{ filterInput.value }}" gefunde.
-        </td>
-    </tr>
-  </table>
-  <div class="table-footer">
-      <mat-paginator
-        *ngIf="!pager?.position || pager?.position == 'bottom'"
-        [pageSizeOptions]="pager?.pageSizeOptions ?? [5, 10, 25, 100]"
-        [pageSize]="pager?.defaultPageSize ?? 100"
-        aria-label="Select page"
-      ></mat-paginator>
-  </div>
+<table
+  mat-table
+  matSort
+  [matSortDisabled]="!dragEnabled ||dragging"
+  cdkDropList
+  cdkDropListOrientation="horizontal"
+  (cdkDropListDropped)="onDragged($event)"
+  [cdkDropListDisabled]="!dragEnabled"
+  [dataSource]="dataSource"
+  class="mat-table"
+>
+  <ng-container
+    *ngFor="let column of columnOrder; let i = index"
+    [matColumnDef]="column.columnDef"
+    class="mat-table-col"
+  >
+    <th
+      mat-header-cell
+      mat-sort-header
+      *matHeaderCellDef
+      cdkDrag
+      (cdkDragStarted)="dragging = true"
+      (cdkDragEnded)="dragging = false"
+      [disabled]="dragging"
+      class="border mat-header-cell"
+      columnResizing
+      [columnResizeIndex]="i"
+      [initialColumnWidth]="column.width ?? null"
+      (resizedColumnSize)="onResizedColumnSize(i, $event)"
+      (resizeClicked)="onResizeClicked($event)"
+    >
+      <span>{{ column.header }}</span>
+    </th>
+    <td mat-cell *matCellDef="let element" class="border mat-cell">
+      {{ column.cell(element.data) }}
+    </td>
+  </ng-container>
+
+  <tr
+    mat-header-row
+    *matHeaderRowDef="displayedColumnOrder"
+    class="mat-header-row"
+  ></tr>
+  <tr
+    mat-row
+    *matRowDef="let row; columns: displayedColumnOrder"
+    (click)="onRowClicked(row.index)"
+    (dblClick)="onRowDblClicked(row.index)"
+    class="mat-row"
+  ></tr>
+
+  <tr *matNoDataRow>
+    <td
+      *ngIf="filterValue.trim().length > 0 && _dataItems.length > 0"
+      [colSpan]="columnOrder.length"
+      class="mat-cell text-center"
+    >
+      Es wurden keine Daten mit dem Filter "{{ filterInput.value }}" gefunden.
+    </td>
+    <td
+      *ngIf="filterValue.trim().length == 0 || _dataItems.length == 0"
+      [colSpan]="columnOrder.length"
+      class="mat-cell text-center"
+    >
+      Es wurden keine Daten gefunden.
+    </td>
+  </tr>
+</table>
+
+<div class="table-footer">
+  <mat-paginator
+    *ngIf="!pager?.position || pager?.position == 'bottom'"
+    [pageSizeOptions]="pager?.pageSizeOptions ?? [5, 10, 25, 100]"
+    [pageSize]="pager?.defaultPageSize ?? 10"
+    aria-label="Select page"
+    [hidePageSize]="pager?.hidePageSize"
+  ></mat-paginator>
 </div>
