Added resizing feature (with bugs)

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,12 +1,12 @@
-<!-- <nh-mat-grouped-table
+<nh-mat-grouped-table
     [columnOrder]="columnOrder"
     [data]="data"
-></nh-mat-grouped-table> -->
+></nh-mat-grouped-table>
 
-<nh-mat-table
+<!-- <nh-mat-table
     [columnOrder]="columnOrder"
     [data]="data"
-></nh-mat-table>
+></nh-mat-table> -->
 
 <!-- <app-rxjs-test
     a="a"
