--- a/src/app/nh-mat-grouped-table/nh-mat-grouped-table.component.html
+++ b/src/app/nh-mat-grouped-table/nh-mat-grouped-table.component.html
@@ -1,26 +1,23 @@
 <!-- TODO save column order between sessions -->
 <div class="table-header">
   <mat-form-field class="w-50">
-      <mat-label>Filter</mat-label>
-      <input
-        matInput
-        [placeholder]="filter?.placeholder ?? 'Suchen...'"
-        [(ngModel)]="filterValue"
-        #filterInput
-      />
-      <button
-        mat-button
-        *ngIf="filterValue"
-        matSuffix
-        mat-icon-button
-        aria-label="Clear"
-        (click)="filterValue=''"
-      >
-        <i
-          class="fa-solid fa-x"
-          style="font-size: 0.75rem;"
-        ></i>
-      </button>
+    <mat-label>Filter</mat-label>
+    <input
+      matInput
+      [placeholder]="filter?.placeholder ?? 'Suchen...'"
+      [(ngModel)]="filterValue"
+      #filterInput
+    />
+    <button
+      mat-button
+      *ngIf="filterValue"
+      matSuffix
+      mat-icon-button
+      aria-label="Clear"
+      (click)="filterValue = ''"
+    >
+      <i class="fa-solid fa-x" style="font-size: 0.75rem"></i>
+    </button>
   </mat-form-field>
 </div>
 
@@ -63,18 +60,27 @@
       (cdkDragEnded)="dragging = false"
       [disabled]="dragging"
       class="border ps-3 mat-header-cell"
+      columnResizing
+      [columnResizeIndex]="colIndex"
+      [initialColumnWidth]="column.width ?? null"
+      (resizedColumnSize)="onResizedColumnSize(colIndex, $event)"
+      (resizeClicked)="onResizeClicked($event)"
     >
       <span>{{ column.header }}</span>
     </th>
-    <!-- TODO fix (and probably filtering) sorting with the newly added rowspan feature -->
+    <!-- TODO fix sorting (and probably filtering) with the newly added rowspan feature -->
     <td
       mat-cell
-      *matCellDef="let element; let rowIndex = index;"
+      *matCellDef="let element; let rowIndex = index"
       class="border ps-3 mat-cell"
-      [attr.rowspan]="element.data[column.columnDef].span ?? 1"
+      [attr.rowspan]="setRowspan(element, column)"
       [ngClass]="setVisibilityIfRowspan(rowIndex, column.columnDef)"
     >
-      {{ element.data[column.columnDef].value ?? element.data[column.columnDef] ?? "" }}
+      {{
+        element.data[column.columnDef].value ??
+          element.data[column.columnDef] ??
+          ""
+      }}
     </td>
   </ng-container>
 
@@ -86,13 +92,11 @@
       [matRippleCentered]="true"
       [attr.colspan]="columnOrder.length"
     >
-      <div
-        class="d-flex gap-2"
-      >
+      <div class="d-flex gap-2">
         <i
           class="fas"
           [ngClass]="group.isExpanded ? 'fa-caret-down' : 'fa-caret-right'"
-          style="width: 1rem; height: 1rem;"
+          style="width: 1rem; height: 1rem"
         ></i>
         <div>{{ group.name }}</div>
       </div>
@@ -116,6 +120,5 @@
     *matRowDef="let row; columns: ['groupHeader']; when: isGroup"
     (click)="toggleRow(row)"
     class="user-select-none group-item-row border-start border-end"
-  >
-  </tr>
+  ></tr>
 </table>
