W.I.P. implenting user setting save/load

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <nh-mat-grouped-table
-    [columnOrder]="columnOrder"
+    [(columnOrder)]="columnOrder"
     [data]="data"
 ></nh-mat-grouped-table>
 
