--- a/src/app/nh-mat-table/nh-mat-table.component.html
+++ b/src/app/nh-mat-table/nh-mat-table.component.html
@@ -45,7 +45,7 @@
     [matColumnDef]="column.columnDef"
     class="mat-table-col"
   >
-    <th
+    <!-- <th
       mat-header-cell
       mat-sort-header
       *matHeaderCellDef
@@ -59,6 +59,18 @@
       [initialColumnWidth]="column.width ?? null"
       (resizedColumnSize)="onResizedColumnSize(i, $event)"
       (resizeClicked)="onResizeClicked($event)"
+    > -->
+    <th
+      mat-header-cell
+      mat-sort-header
+      *matHeaderCellDef
+      cdkDrag
+      (cdkDragStarted)="dragging = true"
+      (cdkDragEnded)="dragging = false"
+      [disabled]="dragging"
+      class="border mat-header-cell"
+      [resizeColumn]="true"
+      [index]="i"
     >
       <span>{{ column.header }}</span>
     </th>
