--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,10 +3,10 @@
     [data]="data"
 ></nh-mat-grouped-table>
 
-<!-- <nh-mat-table
-    [columnOrder]="columnOrder"
-    [data]="data"
-></nh-mat-table> -->
+<nh-mat-table
+    [(columnOrder)]="colOrder"
+    [data]="nd"
+></nh-mat-table>
 
 <!-- <app-rxjs-test
     a="a"
